--- a/FigNex_Mobile/app/src/main/res/values/strings.xml
+++ b/FigNex_Mobile/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="ng_k_">
         Đăng ký
     </string>
+    <string name="phineas_and_ferb_l_phim_ho_t_h_nh_h_i_h_c_v_hai_c_u_b_thi_n_t_i_lu_n_ngh_ra_nh_ng_ph_t_minh_k_qu_c_t_n_h_ng_m_a_h_trong_khi_ch_g_i_candace_lu_n_c_g_ng_m_t_m_con_th_m_v_t_perry_th_b_m_t_ch_n_u_v_i_ti_n_s_doofenshmirtz">Phineas and Ferb là phim hoạt hình hài hước về hai cậu bé thiên tài luôn nghĩ ra những phát minh kỳ quặc để tận hưởng mùa hè. Trong khi chị gái Candace luôn cố gắng mét mẹ, con thú mỏ vịt Perry thì bí mật chến đấu với tiến sĩ Doofenshmirtz</string>
 </resources>
